Create vertex AI Antropic module (#287)
- Add a new Quarkus extension able to access Vertex AI Anthropic on google cloud. This is needed till Google team has not finished the development of the new Google Gen AI SDK and till this works is integrated within langchain4j and quarkus-langchain4j as the current situation is confusing. See G sheet: https://docs.google.com/spreadsheets/d/1pGLTN0N_speUG197RSKn3S9eusVS62had2saTClOV7Y
- Format the code using quarkus eclipse format.xml file packaged as dependency to avoid file not found issue that we see with multi-parent modules
- Bump the version of `quarkus-wiremock` compatible with Quarkus 3.33 as the following class has been removed from quarkus-core-deployment: `io.quarkus.deployment.dev.devservices.GlobalDevServicesConfig`

Signed-off-by: Charles Moulliard <cmoulliard@ibm.com>
Co-authored-by: Georgios Andrianakis <geoand@gmail.com>